<resources>
    <string name="app_name">SimpleShopping</string>
    <string name="shopping_car">购物车</string>
    <string name="price">价格</string>
    <string name="more_info">更多产品信息</string>
    <string name="auto_buy">一键下单</string>
    <string name="share_product">分享商品</string>
    <string name="not_interesting">不感兴趣</string>
    <string name="check_more_product">查看更多商品促销信息</string>
    <string name="delete_product_dialog_title">移除商品</string>
    <string name="delete_product_in_shopping_car_dialog_content">从购物车中移除</string>
    <string name="cancle">取消</string>
    <string name="sure">确定</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="no_info">当前没有任何消息</string>
    <string name="you_have_new_message">您有一条新消息</string>
    <string name="only_sale">仅售</string>
    <string name="buy_now">马上下单</string>
    <string name="already_in_shopping_car">已在购物车中</string>
    <string name="new_product_on_sale">新商品热卖</string>
</resources>
