<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@color/gray">
        <ImageButton
            style="@style/detail_button"
            android:id="@+id/detail_back_main_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back" />
        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/ferrero"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/detail_back_main_button"/>
        <TextView
            style="@style/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ferrero Rocher"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true" />
        <ImageButton
            style="@style/detail_button"
            android:id="@+id/detail_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/empty_star"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true">
            <TextView
                style="@style/detail_price"
                android:id="@+id/detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="¥132.59"/>
            <TextView
                style="@style/detail_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="重量 300g"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">
            <ImageView
                android:id="@+id/price_divider"
                android:background="@color/gray"
                android:layout_centerVertical="true"
                android:layout_width="3dp"
                android:layout_height="30dp" />
            <ImageView
                android:id="@+id/shoplist"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/price_divider"
                android:src="@mipmap/shoplist"/>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/gray"/>
        <TextView
            style="@style/more_info"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more_info"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/gray"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.4">

        <TextView
            style="@style/detail_operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_buy" />
        <ImageView style="@style/detail_operation_divider"/>

        <TextView
            style="@style/detail_operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_product" />
        <ImageView style="@style/detail_operation_divider"/>

        <TextView
            style="@style/detail_operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_interesting" />
        <ImageView style="@style/detail_operation_divider"/>


        <TextView
            style="@style/detail_operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_more_product" />
        <ImageView style="@style/detail_operation_divider"/>
    </LinearLayout>
</LinearLayout>